# computational-sensorimotor-control

./: .gitignore  LICENSE  README.md
homework/hw01/: HW01_Assignment.docx  HW01_Reaching_Predictions.ipynb
homework/hw02/: HW02_Assignment.docx  HW02_MuscleSpeedLimit.ipynb
homework/hw03/: HW03_Assignment.docx  HW03_TriphasicReach.ipynb
homework/hw04/: HW04_Assignment.docx  HW04_EPH_Experiments.ipynb
homework/hw05/: HW05_Assignment.docx  HW05_Workspace_ViaPoint.ipynb  HW05_Workspace_ViaPoint_Solutions.ipynb
homework/hw06/: HW06_Assignment.docx  HW06_InverseDynamics.ipynb
homework/hw07/: HW07_Assignment.docx  HW07_Noise.ipynb
homework/hw08/: HW08_Assignment.docx  HW08_Vision.ipynb
homework/hw09/: HW09_WhenDoesVisionHelp.docx  HW09_WhenDoesVisionHelp.ipynb
homework/hw10/: HW10_Bayesian_Interception.docx  HW10_Bayesian_Interception.ipynb
homework/hw11/: HW11_Assignment.docx  HW11_EPH_Muscle.ipynb
homework/hw12/: HW12_OFC.docx  HW12_OFC.ipynb
homework/hw13/: HW13_iLQG.docx  HW13_iLQG.ipynb
homework/hw14/: HW14_WashoutPredicts.docx  HW14_WashoutPredicts.ipynb
labs/lab01/: Lab01_Kinematics.ipynb
labs/lab02/: Lab02_Muscles.ipynb
labs/lab03/: Lab03_Dynamics.ipynb
labs/lab04/: Lab04_EPH.ipynb
labs/lab05/: Lab05_VITE.ipynb  Lab05_VITE_Solutions.ipynb
labs/lab06/: Lab06_InverseDynamics.ipynb  Lab06_OptionalLabA_Optimization.ipynb  (+1 more)
smc/: pyproject.toml
smc/src/smc/: __init__.py  arm.py  dynamics.py  hill_muscle.py  muscle.py  params.py  plant16d.py  polar_kf.py  sensor.py  simulate_hill_draft.py
smc/tests/: test_smc.py
(+26 files in other folders)
